--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -4,6 +4,8 @@
 	<title>Reverse</title>
 </head>
 <body>
+	<h1>Original Text</h1>
+	<p>{{usertext}}</p>
 	<h1>Reversed Text</h1>
 	<p>{{reversedtext}}</p>
 </body>
