Add count original text

--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -4,7 +4,7 @@
 	<title>Reverse</title>
 </head>
 <body>
-	<h1>Original Text</h1>
+	<h1>Original Text has {{countwords}} words</h1>
 	<p>{{usertext}}</p>
 	<h1>Reversed Text</h1>
 	<p>{{reversedtext}}</p>
